certifications/CKA/networking/np-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-busybox
  namespace: np-test
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command: [ 'sh', '-c', 'while true; do sleep 5; done' ]
