certifications/CKA/networking/np-allow-from-namespace-wrong-port-nginx.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-from-namespace-wrong-port-nginx
  namespace: np-test
spec:
  podSelector:
    matchLabels:
      app: nginx
  # applies for both incoming and outgoing traffic
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: np-test
      # limit the port only 8080
      ports:
        - protocol: TCP
          port: 8080
