certifications/CKA/networking/np-default-nginx.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-default-nginx
  namespace: np-test
spec:
  podSelector:
    matchLabels:
      app: nginx
